# simple_yolo

./: .clang-tidy  .gitignore  CMakeLists.txt  aadesh.sh  main.cpp
config/: darknet.toml
data/: COCO
doc/: yolov3-loss.md
docker/: Dockerfile
include/: bar-loop.hpp  cifar10.hpp  helper.hpp  open-cv-helper.hpp  resnet.hpp  resnet_other.hpp  yolo-dataset.hpp  yolo-loss.hpp  yolo-model.hpp
include/comm/: voc-data.hpp
include/utils/: matplot.hpp  open-cv-helper.hpp  toml-read.hpp
saved_models/: test.txt  yolv3.pt
saved_models/52/: darknet.toml  opitimize.pt  yolov3_current.pt  yolv3.pt
saved_models/overtrain/: yolv3.pt
scripts/: app-run  build.sh  run.sh
src/: CMakeLists.txt  cifar10.cpp  main_cifar10.cpp  main_mnist.cpp  object-detector.cpp  opencv.cpp  plot-test.cpp  resnet-cifar-demo.cpp  simple_main_mnist.cpp  yolo-dataset.cpp  yolo-main.cpp  yolo-model.cpp  yolo-pascal-voc.cpp
